tools/themes/pieceDrag.css
/* Piece Dragging */

body.lichessTools.lichessTools-theme_pieceDrag:not(.lichessTools-hasBoardSize) piece.dragging {
  background-size: 115%;
  background-position: center;
}

body.lichessTools.lichessTools-theme_pieceDrag.lichessTools-hasBoardSize .cg-wrap piece.dragging {
  --drag-scale: 1.25;
  width: calc(var(--board-size) / 8 * var(--drag-scale));
  height: calc(var(--board-size) / 8 * var(--drag-scale));
  left: calc(var(--board-size) / 8 * (1 - var(--drag-scale)) / 2);
  top: calc(var(--board-size) / 8 * (1 - var(--drag-scale)) / 2);
}

body.lichessTools.lichessTools-theme_pieceDrag piece.white.dragging {
  filter: drop-shadow(10px 5px 10px #202020);
}

body.lichessTools.lichessTools-theme_pieceDrag piece.black.dragging {
  filter: drop-shadow(10px 5px 10px #404040);
}

body.lichessTools.lichessTools-theme_pieceDrag square.move-dest:not([style*="hidden"]):hover {
  background: unset;
  box-shadow: inset 0px 0px 7px 7px #FFFFFF80;
  backdrop-filter: brightness(90%);
}

body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d square.move-dest:not([style*="hidden"]) {
  z-index: 300;
}

body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d piece.dragging {
  background-size: 100%;
}

body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d piece {
  clip-path: ellipse(40% 50% at 50% 50%);
}


body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d piece.pawn {
  clip-path: ellipse(40% 30% at 50% 55%);
}

/*body.lichessTools.lichessTools-theme_pieceDrag .manipulable cg-board {
  cursor: pointer;
}*/

body.lichessTools.lichessTools-theme_pieceDrag .manipulable cg-board:has(piece.dragging) {
  cursor: grabbing;
}

